array.island.Island.scala.error
Compilation error:
Island:5: error: identifier expected but integer literal found.
    if (num[rg] < num [rg-1]) {
                          ^Island:8: error: ']' expected but '}' found.
  }
  ^