array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compte: Int = 0
  for (rg <- 1 to Range(num)) {
    if (num[rg] < num [rg-1]) {
      compte+=1
    }
  }
}